[tool.poetry]
name = "lookup-by-attrs"
version = "0.1.0"
description = ""
authors = ["kipparis <keepintine@gmail.com>"]
readme = "README.md"
packages = [{include = "lookup_by_attrs"}]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.5.0"
numpy = "^1.23.4"
poetry = "^0.4.0"
pandas = "^1.5.1"
ducks = "^0.5.1"
dash = "^2.6.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
